# hs_cli

./: .eslintrc.js  .gitattributes  .gitignore  CLAUDE.md  DEVELOPMENT_PLAN.md  MECHANICS_IMPLEMENTATION_PLAN.md  Makefile  PHASE3_COMPLETE.md  README.md  ROADmap.md  TRANSLATION_PLAN.md  generate_translation.js  index-text.js  index.html  index.js  jest.config.js  main.py  modelscope_settings.json  package-lock.json  package.json  play.ts  progress.md  pyproject.toml  requirements.txt  rl-server.js  run_web.py  server.js  test-max-damage.js  tsconfig.json  vite.config.ts
cli/: __init__.py  game_loop.py
cli/display/: __init__.py  card_display.py  game_display.py  menu_display.py
cli/input/: __init__.py  command_parser.py  input_handler.py
cli/menu/: __init__.py  menu_system.py
configs/: default.yaml
data/: config.json
data/cards/: basic.json  druid.json  hunter.json  mage.json  neutral.json  paladin.json  priest.json  quests.json  rogue.json  secrets.json  shaman.json  translation.json  warrior.json
data/decks/: basic_mage.json  basic_warrior.json  index.json  test_deck.json
data/fireplace_decks/: README.md  aggro_druid.yaml  aggro_hunter.yaml  aggro_mage.yaml  aggro_paladin.yaml  aggro_priest.yaml  aggro_rogue.yaml  aggro_shaman.yaml  aggro_warlock.yaml  aggro_warrior.yaml  (+11 more)
docs/: event-system-migration.md  mechanics_comparison.md  mechanisms-status.md  project-guide.md
hearthstone/: __init__.py
hearthstone_cli/: __main__.py
public/: index.html
scripts/: analyze_draws.py  compile_translations.py  extract_cards.py  migrate_checkpoint.py  simple-translate.ts  train.py  translate-fixed.ts  translate-set.ts  translate-simple.ts  translation-agent.ts
src/: demo.ts  index.ts  play.ts  test-buff.ts  test-complete.ts
test/: BattleCalculator.test.js  CardSync.test.js
tests/: __init__.py  test_i18n_integration.py  test_main_i18n.py  test_renderer_i18n.py  test_ui_i18n.py
(+796 files in other folders)
