[project]
name = "hearthstone-cli"
version = "0.1.0"
description = "Hearthstone CLI game with AI training environment"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[tool.pytest.ini_options]
testpaths = ["hearthstone_cli/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
