[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hearthstone-cli"
version = "0.2.0"
description = "PPO training driver on top of fireplace Hearthstone simulator"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "fireplace @ file:///home/xu/code/hstone/hearthstone/fireplace",
    "hearthstone-data",
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "torch>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
include = ["hearthstone*"]

[tool.pytest.ini_options]
markers = ["slow: marks slow integration tests"]
